<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/intro"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/maintext"
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/niubi"
        android:textSize="15sp"
        android:textColor="#CD2626"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"/>    

    
    <TextView
        android:textSize="15sp"
        android:text="@string/bottom"   
        android:textColor="#BA55D3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/> 
    
</LinearLayout>
