<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:saiya="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/techback">
    
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".activities.MainActivity" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.3dp"
        android:background="#8a8a8a"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <com.saiyajin.sensor.view.BottomTabView
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            saiya:icon="@drawable/ic_menu_start_conversation"
            saiya:text="@string/intro"
            saiya:text_size="12sp" />

        <com.saiyajin.sensor.view.BottomTabView
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            saiya:icon="@drawable/ic_menu_friendslist"
            saiya:text="@string/info"
            saiya:text_size="12sp" />

        <com.saiyajin.sensor.view.BottomTabView
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            saiya:icon="@drawable/ic_menu_emoticons"
            saiya:text="@string/sensor"
            saiya:text_size="12sp" />

    </LinearLayout>
        
</LinearLayout>